// Copyright Â© 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package OpenIMServer.protobuf;

option go_package = "github.com/OpenIMSDK/Open-IM-Server/pkg/proto/errinfo";

message ErrorInfo {
  string path = 1;
  uint32 line = 2;
  string name = 3;
  string cause = 4;
  repeated string warp = 5;
}